--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -99,7 +99,7 @@ body {
   line-height: 2.5rem;
   letter-spacing: 0rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   body {
     font-size: 1.5rem;
     font-weight: 500;
@@ -122,7 +122,7 @@ h1 {
   line-height: 4rem;
   letter-spacing: 0.129rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   h1 {
     font-size: 5.6rem;
     font-weight: 700;
@@ -145,7 +145,7 @@ h2 {
   line-height: 3.8rem;
   letter-spacing: 0.1rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   h2 {
     font-size: 4rem;
     font-weight: 700;
@@ -168,7 +168,7 @@ h3 {
   line-height: 3.6rem;
   letter-spacing: 0.115rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   h3 {
     font-size: 3.2rem;
     font-weight: 700;
@@ -191,7 +191,7 @@ h4 {
   line-height: 3.8rem;
   letter-spacing: 0.2rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   h4 {
     font-size: 2.8rem;
     font-weight: 700;
@@ -214,7 +214,7 @@ h5 {
   line-height: 3.3rem;
   letter-spacing: 0.17rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   h5 {
     font-size: 2.4rem;
     font-weight: 700;
@@ -237,7 +237,7 @@ h6 {
   line-height: 2rem;
   letter-spacing: 0.107rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   h6 {
     font-size: 1.5rem;
     font-weight: 700;
@@ -261,7 +261,7 @@ h6 {
   letter-spacing: 0.1rem;
   cursor: pointer;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   .sub-title {
     font-size: 1.3rem;
     font-weight: 700;
@@ -284,7 +284,7 @@ h6 {
   line-height: 1.8rem;
   letter-spacing: 0.1rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   .button-title {
     font-size: 1.3rem;
     font-weight: 700;
@@ -307,7 +307,7 @@ h6 {
   line-height: 2.5rem;
   letter-spacing: 0.2rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   .footer-nav {
     font-size: 1.3rem;
     font-weight: 700;
@@ -429,7 +429,7 @@ footer {
   align-self: end;
   margin-bottom: 1.6rem;
 }
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 72rem) {
   .main .overline {
     font-size: 1.4rem;
     font-weight: 400;
@@ -620,6 +620,9 @@ footer {
 .informational-image {
   width: 100%;
   height: 30rem;
+  background-image: url("../images/shared/desktop/image-best-gear.jpg");
+  background-position: center;
+  background-size: cover;
   border-radius: 0.8rem;
   margin-bottom: 4rem;
 }
